fix: delete z-index for avatar overlay

--- a/src/blocks/profile/__avatar-overlay/profile__avatar-overlay.css
+++ b/src/blocks/profile/__avatar-overlay/profile__avatar-overlay.css
@@ -16,7 +16,6 @@
     height: 100%;
     background-color: #000000;
     opacity: 0;
-    z-index: 1;
     transition: opacity .5s ease-out;
 }
 
@@ -32,7 +31,6 @@
     background-position: center;
     background-size: 26px;
     opacity: 0;
-    z-index: 2;
     transition: opacity .5s ease-out;
     cursor: pointer;
 }
